fix spacing on wysiwyg embedded media

--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -2,6 +2,14 @@
 
 figure {
   margin: 0;
+
+  article {
+    margin: 0;
+
+    img {
+      display: block;
+    }
+  }
 }
 
 img,
